--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand">
             <img src="/src/assets/images/marvel.png" alt="" width="30" height="24" class="d-inline-block align-text-top"> MARVEL APP
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,13 +9,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item-active">
-                    <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link" aria-current="page">Inicio</a>
                 </li>
                 <li class="nav-item-active">
-                    <a class="nav-link " routerLinkActive="tarjetas" href="#">Personajes</a>
+                    <a class="nav-link " routerLinkActive="tarjetas">Personajes</a>
                 </li>
                 <li class="nav-item-active">
-                    <a class="nav-link " href="#">Series</a>
+                    <a class="nav-link ">Series</a>
                 </li>
                 <li class="nav-item-active">
                     <a class="nav-link ">Galeria</a>
